Add implementation of user stories as unit tests and dedicated workflow.