@@ -1,6 +1,5 @@
 package zkstrata.utils;
 
-import org.apache.commons.io.IOUtils;
 import zkstrata.codegen.CodeGenerator;
 import zkstrata.codegen.representations.BulletproofsGadgetsCodeGenerator;
 import zkstrata.compiler.Arguments;
@@ -12,6 +11,8 @@ import zkstrata.domain.data.schemas.dynamic.JsonSchema;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -20,13 +21,16 @@ import java.util.Map;
 import static zkstrata.compiler.Arguments.*;
 
 public class ArgumentsBuilder {
-    private static final String STATEMENTS_PATH = "statements/";
+    private static final String STATEMENTS_PATH = "src/test/resources/statements/";
     private static final String DATA_PATH = "src/test/resources/data/";
     private static final String SCHEMAS_PATH = "src/test/resources/schemas/";
     private static final String ZKSTRATA_EXT = ".zkstrata";
     private static final String JSON_EXT = ".json";
     private static final String SCHEMA_EXT = ".schema.json";
 
+    private String statementsPath;
+    private String dataPath;
+    private String schemaPath;
     private CodeGenerator codeGenerator;
     private Statement statement;
     private List<Arguments.Statement> premises = new ArrayList<>();
@@ -34,7 +38,18 @@ public class ArgumentsBuilder {
     private Map<String, ValueAccessor> instanceData = new HashMap<>();
     private Map<String, Schema> schemas = new HashMap<>();
 
+
+    public ArgumentsBuilder(String statementsPath, String dataPath, String schemaPath, Class clazz) {
+        this.statementsPath = statementsPath;
+        this.dataPath = dataPath;
+        this.schemaPath = schemaPath;
+        this.codeGenerator = new BulletproofsGadgetsCodeGenerator(clazz.getSimpleName());
+    }
+
     public ArgumentsBuilder(Class clazz) {
+        this.statementsPath = STATEMENTS_PATH;
+        this.dataPath = DATA_PATH;
+        this.schemaPath = SCHEMAS_PATH;
         this.codeGenerator = new BulletproofsGadgetsCodeGenerator(clazz.getSimpleName());
     }
 
@@ -49,19 +64,19 @@ public class ArgumentsBuilder {
     }
 
     public ArgumentsBuilder withWitness(String alias, String filename) {
-        String witnessFile = DATA_PATH + filename + JSON_EXT;
+        String witnessFile = this.dataPath + filename + JSON_EXT;
         this.witnessData.put(alias, new JsonAccessor(witnessFile));
         return this;
     }
 
     public ArgumentsBuilder withInstance(String alias, String filename) {
-        String instanceFile = DATA_PATH + filename + JSON_EXT;
+        String instanceFile = this.dataPath + filename + JSON_EXT;
         this.instanceData.put(alias, new JsonAccessor(instanceFile));
         return this;
     }
 
     public ArgumentsBuilder withSchema(String identifier, String filename) {
-        String schemaFile = SCHEMAS_PATH + filename + SCHEMA_EXT;
+        String schemaFile = this.schemaPath + filename + SCHEMA_EXT;
         this.schemas.put(identifier, new JsonSchema(schemaFile, identifier));
         return this;
     }
@@ -71,14 +86,10 @@ public class ArgumentsBuilder {
     }
 
     private String getStatements(String name) {
-        String filename = STATEMENTS_PATH + name + ZKSTRATA_EXT;
-        InputStream inputStream = ArgumentsBuilder.class.getClassLoader().getResourceAsStream(filename);
+        String filename = this.statementsPath + name + ZKSTRATA_EXT;
 
         try {
-            if (inputStream == null)
-                throw new IOException(String.format("Unable to load statement %s.", filename));
-
-            return IOUtils.toString(inputStream, StandardCharsets.UTF_8);
+            return Files.readString(Path.of(filename), StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new IllegalArgumentException(e.getMessage(), e);
         }
